# xero_gift_aid

./: pyproject.toml
xero_gift_aid/: __main__.py
